--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Kelme price convert size</title>
+  <title>TGT</title>
   <link href="style.css" rel="stylesheet">
  </head>
  <body>
